@@ -1,5 +1,5 @@
 /*
- * $Id: x11.trm,v 1.51 2002/02/13 18:01:00 broeker Exp $
+ * $Id: x11.trm,v 1.52 2002/02/14 14:21:09 broeker Exp $
  *
  */
 
@@ -215,8 +215,10 @@ parse_driver(const char *cmd)
 
 	if (!dir)
 	    dir = X11_DRIVER_DIR;
+#ifndef OS2
 	if (dir[0] != '/' && dir[0] != '.')
 	    int_error(NO_CARET, "Illegal X11 driver directory name !");
+#endif
 	X11_full_command_path = gp_realloc(X11_full_command_path,
 					   strlen(dir) + strlen(optvec[0]) + 2,
 					   "x11 driver pathname");
@@ -506,14 +508,26 @@ X11_init()
 
     if (!X11_ipc) {
 	/* first time through or after a reset */
-#if defined(OSK) || defined(OS2)
+#if defined(OSK)
 	/* OS-9 popen() does not block on close for child to end, so
 	 * we can safely use it here
 	 */
 	/* FIXME HBB 20020214: This doesn't understand X11_DRIVER_DIR
 	 * or $GNUPLOT_DRIVER_DIR yet. This may break execution of
 	 * freshly built gnuplot until 'make install' */
-	X11_ipc = popen(X11_command, "w");
+
+   	   X11_ipc = popen(X11_command, "w");
+#else 
+#if defined(OS2)
+      /* FIXME amai 20020219: nice try...
+       * But popen() does return a non-NULL handle to almost command,
+       * it's just a new session which will stop if the command does
+       * not exist... We should stat() for the argument?! */
+      /* X11_ipc = popen(X11_full_command_path, "w");
+      if (X11_ipc==NULL) */
+      {
+   	   X11_ipc = popen(X11_command, "w");
+      }
 #else /* !(OSK || OS/2) */
 	int fdes[2];
 # ifdef PIPE_IPC
@@ -588,7 +602,8 @@ X11_init()
 	/* close the read side of the parent's forward fd */
 	close(fdes[0]);
 	X11_ipc = fdopen(fdes[1], "w");
-#endif /* !(OSK || OS/2) */
+#endif /* !OSK  */
+#endif /* !OS/2 */
     }
 
     if (!been_here) {
